[metadata]
name = watergrid
version = attr: watergrid.__version__
author = ARMmaster17
author_email = [email protected]
url = https://github.com/ARMmaster17/watergrid
description = Lightweight distributed configurable data processing pipeline.
long_description = file: README.md
keywords = etl
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    redis==4.1.3
    pycron==3.0.0

[options.package_data]
* = README.md